--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <li><a href="https://www.google.com" target="_blank">absoluta</a></li>
     </ol>
     <ul>
-        <li><a href="clase1.html">Pagina Introductoria</a></li>
-        <li><a href="nuevo.html">Primer trabajo en html</a></li>
+        <li><a href="clase1.html" target="_blank">Pagina Introductoria</a></li>
+        <li><a href="nuevo.html" target="_blank">Primer trabajo en html</a></li>
     </ul>
     <div style="height: 500px;"><ol id="h10">
         <li>Anclas</li>
