--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="img/circle-heat-svgrepo-com.svg">
     <title>Indice</title>
     <style>
         h1{
