--- a/css/portafolioGalery.html
+++ b/css/portafolioGalery.html
@@ -31,39 +31,44 @@
             </picture>
             <span class="hero-content">
                 <h2>APortafolio</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam rerum quis laudantium at quaerat.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, aperiam rerum quis laudantium at
+                    quaerat.</p>
                 <form action="portafolioGalery.html" method="get">
                     <button>Ver mas</button>
                 </form>
             </span>
         </section>
-        <h2>Precios</h2>
-        <section class="precios">
-            <div class="card">
-                <h3>Precio A</h3>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic officiis voluptas quia harum saepe culpa, similique placeat aperiam distinctio ea repellendus reprehenderit maiores veritatis magni fuga quas error necessitatibus reiciendis. A</p>
-                <span>100.00</span>
-                <form>
-                    <button> Subscribe </button>
-                </form>
-            </div>
-            <div class="card">
-                <h3>Precio C</h3>
-                <p>Small Description C</p>
-                <span>150.00</span>
-                <form>
-                    <button> Subscribe </button>
-                </form>
-            </div>
-            <div class="card">
-                <h3>Precio B</h3>
-                <p>Small Description B</p>
-                <span>200.00</span>
-                <form>
-                    <button> Subscribe </button>
-                </form>
-            </div>
-        </section>
+        <div class="container">
+            <h2>Precios</h2>
+            <section class="precios">
+                <div class="card">
+                    <h3>Precio A</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic officiis voluptas quia harum saepe
+                        culpa, similique placeat aperiam distinctio ea repellendus reprehenderit maiores veritatis magni
+                        fuga quas error necessitatibus reiciendis. A</p>
+                    <span>100.00</span>
+                    <form>
+                        <button> Subscribe </button>
+                    </form>
+                </div>
+                <div class="card">
+                    <h3>Precio C</h3>
+                    <p>Small Description C</p>
+                    <span>150.00</span>
+                    <form>
+                        <button> Subscribe </button>
+                    </form>
+                </div>
+                <div class="card">
+                    <h3>Precio B</h3>
+                    <p>Small Description B</p>
+                    <span>200.00</span>
+                    <form>
+                        <button> Subscribe </button>
+                    </form>
+                </div>
+            </section>
+        </div>
     </main>
     <footer>
         <span class="footer-content">
